--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="glass-card p-6 space-y-4">
             <div class="flex gap-2">
-                <input type="text" id="foodInput" placeholder="輸入搜尋內容..." class="w-full bg-slate-50 border-none p-4 rounded-2xl text-sm font-bold outline-none focus:ring-2 focus:ring-blue-100">
+                <input type="text" id="foodInput" placeholder="輸入..." class="w-full bg-slate-50 border-none p-4 rounded-2xl text-sm font-bold outline-none focus:ring-2 focus:ring-blue-100">
                 <button onclick="handleSearch()" class="sky-accent text-white px-6 rounded-2xl font-black">搜尋</button>
             </div>
             <div id="searchResult" class="hidden bg-blue-50/50 p-4 rounded-3xl border border-blue-100">
