--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div id="searchResult" class="hidden bg-blue-50/50 p-4 rounded-3xl border border-blue-100">
                 <p id="resName" class="font-black text-slate-600 text-sm mb-3 px-1"></p>
                 <div class="flex gap-2 items-center">
-                    <input type="number" id="foodAmount" placeholder="..." class="w-20 p-2.5 rounded-xl border-none font-bold text-blue-600 text-sm shadow-inner">
+                    <input type="number" id="foodAmount" placeholder="" class="w-20 p-2.5 rounded-xl border-none font-bold text-blue-600 text-sm shadow-inner">
                     <button onclick="addToDiary()" class="flex-1 sky-accent text-white py-2.5 rounded-xl font-black text-sm shadow-md">確認加入</button>
                 </div>
             </div>
