--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <div class="glass-card p-6 flex items-center justify-between">
             <div class="space-y-1">
-                <p class="text-[10px] font-black text-slate-400 uppercase tracking-widest italic">Hydration (Target 3000)</p>
+                <p class="text-[10px] font-black text-slate-400 uppercase tracking-widest italic">Water (Target 3000)</p>
                 <p id="waterText" class="text-3xl font-black italic text-slate-700">0 <span class="text-sm text-slate-400 ml-1">/ 3000 cc</span></p>
             </div>
             <div class="flex gap-2">
