--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="glass-card p-6">
             <p class="text-[10px] font-black text-slate-400 uppercase tracking-widest mb-4">Weight History</p>
             <div class="flex gap-3">
-                <input type="number" id="weightInput" step="0.1" placeholder="今日體重 kg" class="w-full bg-slate-50 border-none p-4 rounded-2xl text-lg font-bold outline-none">
+                <input type="number" id="weightInput" step="0.1" placeholder=" kg " class="w-full bg-slate-50 border-none p-4 rounded-2xl text-lg font-bold outline-none">
                 <button onclick="saveWeight()" class="bg-slate-800 text-white px-8 rounded-2xl font-black shadow-lg">儲存</button>
             </div>
         </div>
